--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "flowbite": "^2.5.2"
     }
 }
